--- a/members/style.css
+++ b/members/style.css
@@ -2,6 +2,7 @@ body {
   background: rgb(2, 0, 36);
   background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(34, 144, 166, 1) 72%);
   color: #efd2d2;
+  text-shadow: 1px 1px 2px rgb(81, 30, 38);
   background: rgb(2, 0, 36);
   background: radial-gradient(circle, rgba(2, 0, 36, 1) 25%, rgba(34, 144, 166, 1) 72%);
   background: rgb(218, 136, 14);
